--- a/src/main/resources/messages/messages_ru.properties
+++ b/src/main/resources/messages/messages_ru.properties
@@ -14,4 +14,6 @@ message.notMatches.user.email = Email is not valid!
 
 message.alreadyExists.user.email = There is an account with that email address!
 
+message.order.successCreation = Order has been created successfully!
+
 enum.orderStatus.CART = Корзина
