--- a/src/main/resources/messages/messages_ru.properties
+++ b/src/main/resources/messages/messages_ru.properties
@@ -1,19 +1,74 @@
-message.badCredentials = Invalid username or password
-message.notEmpty.calculator.productType = Product type is required!
-message.notEmpty.calculator.cost = Cost is required!
+#Main navbar
+message.navbar.modal.header = Остались вопросы?
+message.navbar.modal.button.send=Отправить
+message.navbar.section.home=Главная
+message.navbar.section.calculator=Рассчитать заказ
+message.navbar.section.catalog=Каталог
+message.navbar.section.contacts=Контакты
+message.navbar.lang.heading=Язык
+message.navbar.lang.en=Английский
+message.navbar.lang.ru=Русский
+message.navbar.button.callRequest=Обратный звонок
+message.navbar.button.logIn=Вход
+message.navbar.button.signUp=Регистрация
+message.navbar.button.cart=Корзина
+message.navbar.button.logOut=Выйти
+message.navbar.button.profile=Профиль
+message.navbar.button.adminDashboard=Панель администратора
+message.navbar.button.user=Пользователь
 
-message.notEmpty.user.login = Login is required!
-message.notEmpty.user.password = Password is required!
-message.notEmpty.user.confirmPassword = Password confirm is required!
-message.notEmpty.user.email = Email is required!
+#Main
+message.main.headingCarousel.partition=Стеклянные двери и перегородки
+message.main.headingCarousel.mirror=Зеркальные композиции и зеркала
+message.main.headingCarousel.shower=Душевые кабины из стекла
+message.main.textCarousel=Изготовление под заказ, с доставкой и установкой
+message.main.carousel.next=Следующий
+message.main.carousel.prev=Предыдущий
+message.main.header=Изделия из стекла
+message.main.headerParagraph1=Большой ассортимент зеркал, мебели, другой продукции из стекла на заказ, которые придадут оригинальность, неповторимость интерьеру!
+message.main.headerParagraph2=У нас особый подход к клиенту: любое изделие, которое Вы увидите на нашем сайте, может быть изготовлено в соответствии с Вашими пожеланиями.
+message.main.headerParagraph3=Предлагаем оригинальные решения из стекла: полки, стеклянные перегородки, зеркала любой формы.
+message.main.headerParagraph4=Скинали и стеклянные панно органично вписываются в кухню, матовая душевая кабина — в ванную комнату, а гостиную можно украсить зеркалами с необычным дизайном, а в спальню впишется шкаф-купе с узорчатой зеркальной поверхностью.
+message.main.catalogSection.mirror=Зеркала с подстветкой
+message.main.catalogSection.partition=Перегородки из стекла
+message.main.catalogSection.shower=Душевые из стекла
+message.main.catalogSection.apron=Кухонные скинали
+message.main.button.goToCatalog=Перейти в каталог
+message.main.advantages.header=Наши преимущества
+message.main.advantages.line1=20 лет на рынке
+message.main.advantages.line1.description=Наша компания на рынке около 20 лет
+message.main.advantages.line2=Минимальная наценка
+message.main.advantages.line2.description=Мы не имеем диллеров и посредников, поэтому ценна продукции имеет минимальную наценку
+message.main.advantages.line3 = Надежность и долговечность
+message.main.advantages.line3.description=Установку изделий прозводят опытные специалисты, что гарантирует долговечность и прочность
+message.main.advantages.line4 = Качественная фурнитура
+message.main.advantages.line4.description=Используем качественную фурнитуру мировых брендов
+message.main.acts.header=Что мы делаем для своих клиентов
+message.main.acts.line1=Изготавливаем стеклянные изделия любых форм и размеров, массово или на заказ, по особому дизайну.
+message.main.acts.line2=Большой выбор материалов позволяет реализовать любые проекты.
+message.main.acts.line3=Мы работаем как с масштабными проектами, так и индивидуальными, единичными заказами.
+message.main.acts.line4=Каждую вашу заявку мы выполним быстро.
+message.main.acts.line5=Мы можем выполнить услуги обработки стеклянных поверхностей: резку, сверление отверстий, матирование, закалку и многое другое. Любые работы мы проведем быстро, качественно.
+#Form
+message.form.nameModal.placeHolder=Представьтесь, пожалуйста
+message.form.email.placeHolder=Введите email
+message.form.phone.placeholder=Введите мобильный телефон
+message.form.topic.placeholder=Тема
+message.form.message.placeholder=Сообщение
+#Notification
+message.notification.modalSend.success=Запрос успешно отправлен!
 
-message.notConfirm.user.password = Password confirm does not matches!
 
-message.notMatches.user.password = Password must consist of minimum eight characters, at least one letter and one number!
-message.notMatches.user.email = Email is not valid!
-
-message.alreadyExists.user.email = There is an account with that email address!
-
-message.order.successCreation = Order has been created successfully!
-
-enum.orderStatus.CART = Корзина
+message.badCredentials=Invalid username or password
+message.notEmpty.calculator.productType=Product type is required!
+message.notEmpty.calculator.cost=Cost is required!
+message.notEmpty.user.login=Login is required!
+message.notEmpty.user.password=Password is required!
+message.notEmpty.user.confirmPassword=Password confirm is required!
+message.notEmpty.user.email=Email is required!
+message.notConfirm.user.password=Password confirm does not matches!
+message.notMatches.user.password=Password must consist of minimum eight characters, at least one letter and one number!
+message.notMatches.user.email=Email is not valid!
+message.alreadyExists.user.email=There is an account with that email address!
+message.order.successCreation=Order has been created successfully!
+enum.orderStatus.CART=Корзина
