--- a/src/main/resources/messages/messages_en.properties
+++ b/src/main/resources/messages/messages_en.properties
@@ -1,1 +1,57 @@
-enum.orderStatus.CART = Корзина
+#Main navbar
+message.navbar.modal.header=Have any questions?
+message.navbar.modal.button.send=Send
+message.navbar.section.home=Home
+message.navbar.section.calculator=Calculate order
+message.navbar.section.catalog=Catalog
+message.navbar.section.contacts=Contacts
+message.navbar.lang.heading=Language
+message.navbar.lang.en=English
+message.navbar.lang.ru=Russian
+message.navbar.button.callRequest=Call request
+message.navbar.button.logIn=Log in
+message.navbar.button.signUp=Sign up
+message.navbar.button.logOut=Log ot
+message.navbar.button.profile=Profile
+message.navbar.button.adminDashboard=Admin dashboard
+message.navbar.button.user=User
+#Main
+message.main.headingCarousel.partition=Glass doors and partitions
+message.main.headingCarousel.mirror=Mirror composition and mirrors 
+message.main.headingCarousel.shower=Glass shower cabins
+message.main.textCarousel=Customization, delivery and installation
+message.main.carousel.next=Next
+message.main.carousel.prev=Previous
+message.main.header=Glass products
+message.main.headerParagraph1=A large assortment of mirrors, furniture, other glass products to order, which will give originality, uniqueness to the interior!
+message.main.headerParagraph2=We have a special approach to the client: any product that you see on our website can be made in accordance with your wishes.
+message.main.headerParagraph3=We offer original glass solutions: shelves, glass partitions, mirrors of any shape.
+message.main.headerParagraph4=Skinali and glass panels organically fit into the kitchen, a matte shower stall - into the bathroom, and the living room can be decorated with mirrors with an unusual design, and a sliding wardrobe with a patterned mirror surface will fit into the bedroom.
+message.main.catalogSection.mirror=Illuminated mirrors
+message.main.catalogSection.partition=Glass partition
+message.main.catalogSection.shower=Glass shower
+message.main.catalogSection.apron=Kitchen glass apron
+message.main.advantages.header=Our advantages
+message.main.advantages.line1=20 years on the market
+message.main.advantages.line1.description=Our company has been on the market for about 20 years
+message.main.advantages.line2=Minimum Markup
+message.main.advantages.line2.description=We do not have dealers and intermediaries, therefore the product has a minimal markup
+message.main.advantages.line3=Reliability and Durability
+message.main.advantages.line3.description=Experienced installation specialists ensure durability and strength
+message.main.advantages.line4=Quality Hardware
+message.main.advantages.line4.description=We use high-quality accessories from world brands
+message.main.button.goToCatalog=Go to catalog 
+message.main.acts.header=What we do for our clients
+message.main.acts.line1=We produce glass products of any shape and size, in bulk or to order, according to a special design.
+message.main.acts.line2=A wide range of materials allows you to implement any project.
+message.main.acts.line3=We work with both large-scale projects and individual, one-off orders.
+message.main.acts.line4=We will fulfill your every request quickly.
+message.main.acts.line5=We can perform glass surface treatment services: cutting, drilling, matting, tempering and much more. We will carry out any work quickly and efficiently.
+#Form
+message.form.nameModal.placeHolder=Introduce yourself
+message.form.email.placeHolder=Enter email
+message.form.phone.placeholder=Enter phone number
+message.form.topic.placeholder=Topic
+message.form.message.placeholder=Messages
+#Notification
+message.notification.modalSend.success=Your request is sent successfully
