--- a/src/main/resources/messages/messages_en.properties
+++ b/src/main/resources/messages/messages_en.properties
@@ -1,3 +1,4 @@
+#Header
 #Main navbar
 message.navbar.modal.header=Have any questions?
 message.navbar.modal.button.send=Send
@@ -49,9 +50,36 @@ message.main.acts.line4=We will fulfill your every request quickly.
 message.main.acts.line5=We can perform glass surface treatment services: cutting, drilling, matting, tempering and much more. We will carry out any work quickly and efficiently.
 #Form
 message.form.nameModal.placeHolder=Introduce yourself
+message.form.name.placeHolder=Enter name
+message.form.name.label=Name
 message.form.email.placeHolder=Enter email
+message.form.email.label=Email
 message.form.phone.placeholder=Enter phone number
+message.form.phone.label=Phone
 message.form.topic.placeholder=Topic
 message.form.message.placeholder=Messages
+message.form.login.placeHolder=Enter login
+message.form.login.label=Login
+message.form.password.placeHolder=Enter password
+message.form.password.label=Password
+message.form.passwordConfirm.placeHolder=Confirm password
+message.form.passwordConfirm.label=Confirm password
+message.form.button.submitLogin=Submit
+message.form.button.submitSignUp=Submit
+message.form.text.signUp=Don’t have an account?
+message.form.signUpTextEmail=We'll never share your data with anyone else.
 #Notification
 message.notification.modalSend.success=Your request is sent successfully
+#Validation
+message.badCredentials=Invalid username or password
+message.notEmpty.calculator.productType=Product type is required!
+message.notEmpty.calculator.cost=Cost is required!
+message.notEmpty.user.login=Login is required!
+message.notEmpty.user.password=Password is required!
+message.notEmpty.user.confirmPassword=Password confirm is required!
+message.notEmpty.user.email=Email is required!
+message.notConfirm.user.password=Password confirm does not matches!
+message.notMatches.user.password=Password must consist of minimum eight characters, at least one letter and one number!
+message.notMatches.user.email=Email is not valid!
+message.alreadyExists.user.email=There is an account with that email address!
+message.order.successCreation=Order has been created successfully!
