--- a/src/main/resources/messages/messages_ru.properties
+++ b/src/main/resources/messages/messages_ru.properties
@@ -1,5 +1,6 @@
+#Header
 #Main navbar
-message.navbar.modal.header = Остались вопросы?
+message.navbar.modal.header=Остались вопросы?
 message.navbar.modal.button.send=Отправить
 message.navbar.section.home=Главная
 message.navbar.section.calculator=Рассчитать заказ
@@ -16,7 +17,6 @@ message.navbar.button.logOut=Выйти
 message.navbar.button.profile=Профиль
 message.navbar.button.adminDashboard=Панель администратора
 message.navbar.button.user=Пользователь
-
 #Main
 message.main.headingCarousel.partition=Стеклянные двери и перегородки
 message.main.headingCarousel.mirror=Зеркальные композиции и зеркала
@@ -39,9 +39,9 @@ message.main.advantages.line1=20 лет на рынке
 message.main.advantages.line1.description=Наша компания на рынке около 20 лет
 message.main.advantages.line2=Минимальная наценка
 message.main.advantages.line2.description=Мы не имеем диллеров и посредников, поэтому ценна продукции имеет минимальную наценку
-message.main.advantages.line3 = Надежность и долговечность
+message.main.advantages.line3=Надежность и долговечность
 message.main.advantages.line3.description=Установку изделий прозводят опытные специалисты, что гарантирует долговечность и прочность
-message.main.advantages.line4 = Качественная фурнитура
+message.main.advantages.line4=Качественная фурнитура
 message.main.advantages.line4.description=Используем качественную фурнитуру мировых брендов
 message.main.acts.header=Что мы делаем для своих клиентов
 message.main.acts.line1=Изготавливаем стеклянные изделия любых форм и размеров, массово или на заказ, по особому дизайну.
@@ -51,24 +51,39 @@ message.main.acts.line4=Каждую вашу заявку мы выполним
 message.main.acts.line5=Мы можем выполнить услуги обработки стеклянных поверхностей: резку, сверление отверстий, матирование, закалку и многое другое. Любые работы мы проведем быстро, качественно.
 #Form
 message.form.nameModal.placeHolder=Представьтесь, пожалуйста
+message.form.name.placeHolder=Введите ФИО
+message.form.name.label=ФИО
 message.form.email.placeHolder=Введите email
+message.form.email.label=Email
 message.form.phone.placeholder=Введите мобильный телефон
+message.form.phone.label=Мобильный телефон
 message.form.topic.placeholder=Тема
 message.form.message.placeholder=Сообщение
+message.form.login.placeHolder=Введите логин
+message.form.login.label=Логин
+message.form.password.placeHolder=Введите пароль
+message.form.password.label=Пароль
+message.form.passwordConfirm.placeHolder=Подтверждение пароля
+message.form.passwordConfirm.label=Подтвердите пароль
+message.form.button.submitLogin=Войти
+message.form.button.submitSignUp=Зарегистрироваться
+message.form.text.signUp=Еще не зарегистрировались?
+message.form.signUpTextEmail = Мы не распространяем ваши персональные данные
+
+
 #Notification
 message.notification.modalSend.success=Запрос успешно отправлен!
-
-
-message.badCredentials=Invalid username or password
-message.notEmpty.calculator.productType=Product type is required!
-message.notEmpty.calculator.cost=Cost is required!
-message.notEmpty.user.login=Login is required!
-message.notEmpty.user.password=Password is required!
-message.notEmpty.user.confirmPassword=Password confirm is required!
-message.notEmpty.user.email=Email is required!
-message.notConfirm.user.password=Password confirm does not matches!
-message.notMatches.user.password=Password must consist of minimum eight characters, at least one letter and one number!
-message.notMatches.user.email=Email is not valid!
-message.alreadyExists.user.email=There is an account with that email address!
-message.order.successCreation=Order has been created successfully!
+#Validation
+message.badCredentials=Неверное имя пользователя или пароль!
+message.notEmpty.calculator.productType=Требуется тип изделия!
+message.notEmpty.calculator.cost=Требуется стоиоть!
+message.notEmpty.user.login=Требуется логин!
+message.notEmpty.user.password=Требуется пароль!
+message.notEmpty.user.confirmPassword=Требуется подтверждение пароля!
+message.notEmpty.user.email=Требуется email!
+message.notConfirm.user.password=Пароли не совпадают!
+message.notMatches.user.password=Пароль должен содержать не менее 8 символов, как мимум одн латинскую букву и одно число!
+message.notMatches.user.email=Неверный email!
+message.alreadyExists.user.email=Аккаунт с таким email фдрусом уже существует!
+message.order.successCreation=Заказ успешно сформирован!
 enum.orderStatus.CART=Корзина
