--- a/src/main/resources/messages/messages_en.properties
+++ b/src/main/resources/messages/messages_en.properties
@@ -83,3 +83,9 @@ message.notMatches.user.password=Password must consist of minimum eight characte
 message.notMatches.user.email=Email is not valid!
 message.alreadyExists.user.email=There is an account with that email address!
 message.order.successCreation=Order has been created successfully!
+#Access denied
+message.accessDenied.code.label = ERROR CODE
+message.accessDenied.code.text = HTTP 403 Forbidden
+message.accessDenied.description.label = ERROR DESCRIPTION
+message.accessDenied.description.text = Access Denied. You Do Not Have The Permission To Access This Page On This Server
+message.accessDenied.footer = HAVE A NICE DAY
