--- a/src/main/resources/messages/messages_ru.properties
+++ b/src/main/resources/messages/messages_ru.properties
@@ -86,4 +86,11 @@ message.notMatches.user.password=Пароль должен содержать н
 message.notMatches.user.email=Неверный email!
 message.alreadyExists.user.email=Аккаунт с таким email фдрусом уже существует!
 message.order.successCreation=Заказ успешно сформирован!
+
+#Access denied
+message.accessDenied.code.label = КОД ОШИБКИ
+message.accessDenied.code.text = HTTP 403 Доступ запрещен
+message.accessDenied.description.label = ОПИСАНИЕ ОШИБКИ
+message.accessDenied.description.text = Доступ Запрещен. Доступ К Данной Странице На Сервере Запрещен.
+message.accessDenied.footer = ХОРОШЕГО ДНЯ
 enum.orderStatus.CART=Корзина
