--- a/src/main/resources/messages/messages_en.properties
+++ b/src/main/resources/messages/messages_en.properties
@@ -82,10 +82,18 @@ message.notConfirm.user.password=Password confirm does not matches!
 message.notMatches.user.password=Password must consist of minimum eight characters, at least one letter and one number!
 message.notMatches.user.email=Email is not valid!
 message.alreadyExists.user.email=There is an account with that email address!
-message.order.successCreation=Order has been created successfully!
+message.order.successCreation=Order is created successfully!
 #Access denied
 message.accessDenied.code.label = ERROR CODE
 message.accessDenied.code.text = HTTP 403 Forbidden
 message.accessDenied.description.label = ERROR DESCRIPTION
 message.accessDenied.description.text = Access Denied. You Do Not Have The Permission To Access This Page On This Server
 message.accessDenied.footer = HAVE A NICE DAY
+#Contacts
+message.contacts.heading = Our contacts
+message.contacts.workingHours = Working hours: 10:00-17:00
+message.contacts.weekends = Weekends: Monday
+message.contacts.address = Address: Minsk, Uruchskaya street, Construction market "Uruchye", pavilion 27A
+message.contacts.phone.heading = Phones:
+message.contacts.phone1 = A1 +375 (44) 782-50-19</p>
+message.contacts.phone2 = MTC +375 (29) 708-76-93</p>
