--- a/src/main/resources/messages/messages_ru.properties
+++ b/src/main/resources/messages/messages_ru.properties
@@ -93,4 +93,13 @@ message.accessDenied.code.text = HTTP 403 Доступ запрещен
 message.accessDenied.description.label = ОПИСАНИЕ ОШИБКИ
 message.accessDenied.description.text = Доступ Запрещен. Доступ К Данной Странице На Сервере Запрещен.
 message.accessDenied.footer = ХОРОШЕГО ДНЯ
+#Contacts
+message.contacts.heading = Наши контакты
+message.contacts.workingHours = Время работы: 10:00-17:00
+message.contacts.weekends = Выходные: Понедельник
+message.contacts.address = Адрес: г.Минск, ул.Уручская, Строительный рынок "Уручье", павильон 27А
+message.contacts.phone.heading = Телефоны:
+message.contacts.phone1 = A1 +375 (44) 782-50-19</p>
+message.contacts.phone2 = MTC +375 (29) 708-76-93</p>
+
 enum.orderStatus.CART=Корзина
