--- a/src/main/resources/messages/messages_en.properties
+++ b/src/main/resources/messages/messages_en.properties
@@ -97,3 +97,19 @@ message.contacts.address = Address: Minsk, Uruchskaya street, Construction marke
 message.contacts.phone.heading = Phones:
 message.contacts.phone1 = A1 +375 (44) 782-50-19</p>
 message.contacts.phone2 = MTC +375 (29) 708-76-93</p>
+#Catalog
+message.catalog.mirror.description = Mirrors are multifunctional interior elements. They combine two main functions: practical and decorative. With their help, you can transform a room, achieve interesting optical effects. You can place an order by phone or via the online form.
+message.catalog.partition.description = Glass partitions are not only a way of zoning a space, but also a decorative element. They can visually expand the room and increase the luminous flux. You can place an order by phone or via an online form. 
+message.catalog.shower.description = Glass shower enclosures perfectly solve issues related to the quality, convenience, functionality of the bathroom. They allow you to eliminate crowding, monotony, and implement the most interesting design ideas in the interior of the room. You can place an order by phone or via the online form.
+message.catalog.apron.description = The appearance of skinale allowed us to reconsider approaches to the design of the kitchen interior. A glass apron for the kitchen has not just become a popular interior solution. You can place an order by phone or via the online form.
+#Enums
+message.enum.productType.glass.plural = Glass
+message.enum.productType.glass = Glass
+message.enum.productType.mirror.plural = Mirrors
+message.enum.productType.mirror = Mirror
+message.enum.productType.partition.plural = Partitions
+message.enum.productType.partition = Partition
+message.enum.productType.shower.plural = Showers
+message.enum.productType.shower = Shower
+message.enum.productType.apron.plural = Kitchen aprons
+message.enum.productType.apron = Kitchen apron
