cart i18n, cart js

--- a/src/main/resources/messages/messages_en.properties
+++ b/src/main/resources/messages/messages_en.properties
@@ -6,6 +6,7 @@ message.navbar.section.home=Home
 message.navbar.section.calculator=Calculate order
 message.navbar.section.catalog=Catalog
 message.navbar.section.contacts=Contacts
+message.navbar.section.cart=Cart
 message.navbar.lang.heading=Language
 message.navbar.lang.en=English
 message.navbar.lang.ru=Russian
@@ -68,6 +69,9 @@ message.form.button.submitLogin=Submit
 message.form.button.submitSignUp=Submit
 message.form.text.signUp=Don’t have an account?
 message.form.signUpTextEmail=We'll never share your data with anyone else.
+message.form.button.selectAll=Select all
+message.form.address.label = Address
+message.form.address.placeholder = Enter delivery address
 #Notification
 message.notification.modalSend.success=Your request is sent successfully
 #Validation
@@ -113,3 +117,18 @@ message.enum.productType.shower.plural = Showers
 message.enum.productType.shower = Shower
 message.enum.productType.apron.plural = Kitchen aprons
 message.enum.productType.apron = Kitchen apron
+#Orders
+message.orders.heading = Orders
+message.orders.column.orderList = Order list
+message.orders.column.cost = Cost
+message.orders.button.formOrder = Form order
+message.orders.button.formAndPayOrder = Form and pay for order
+message.orders.total = Total
+message.orders.deliveryMethod = Delivery methods
+message.orders.deliveryMethod.delivery = Delivery
+message.orders.deliveryMethod.pickUp = Pick up
+message.orders.paymentMethod = Payment methods
+message.orders.paymentMethod.cash = Cash
+message.orders.paymentMethod.card = Card
+message.orders.address.text=* Specify the delivery cost by phone
+message.orders.total.text=* Total cost excluding delivery
