--- a/src/main/resources/messages/messages_ru.properties
+++ b/src/main/resources/messages/messages_ru.properties
@@ -6,13 +6,13 @@ message.navbar.section.home=Главная
 message.navbar.section.calculator=Рассчитать заказ
 message.navbar.section.catalog=Каталог
 message.navbar.section.contacts=Контакты
+message.navbar.section.cart=Корзина
 message.navbar.lang.heading=Язык
 message.navbar.lang.en=Английский
 message.navbar.lang.ru=Русский
 message.navbar.button.callRequest=Обратный звонок
 message.navbar.button.logIn=Вход
 message.navbar.button.signUp=Регистрация
-message.navbar.button.cart=Корзина
 message.navbar.button.logOut=Выйти
 message.navbar.button.profile=Профиль
 message.navbar.button.adminDashboard=Панель администратора
@@ -68,9 +68,10 @@ message.form.passwordConfirm.label=Подтвердите пароль
 message.form.button.submitLogin=Войти
 message.form.button.submitSignUp=Зарегистрироваться
 message.form.text.signUp=Еще не зарегистрировались?
-message.form.signUpTextEmail = Мы не распространяем ваши персональные данные
-
-
+message.form.signUpTextEmail=Мы не распространяем ваши персональные данные
+message.form.button.selectAll=Выбрать все
+message.form.address.label=Адрес
+message.form.address.placeholder=Введите адрес доставки
 #Notification
 message.notification.modalSend.success=Запрос успешно отправлен!
 #Validation
@@ -86,37 +87,49 @@ message.notMatches.user.password=Пароль должен содержать н
 message.notMatches.user.email=Неверный email!
 message.alreadyExists.user.email=Аккаунт с таким email фдрусом уже существует!
 message.order.successCreation=Заказ успешно сформирован!
-
 #Access denied
-message.accessDenied.code.label = КОД ОШИБКИ
-message.accessDenied.code.text = HTTP 403 Доступ запрещен
-message.accessDenied.description.label = ОПИСАНИЕ ОШИБКИ
-message.accessDenied.description.text = Доступ Запрещен. Доступ К Данной Странице На Сервере Запрещен.
-message.accessDenied.footer = ХОРОШЕГО ДНЯ
+message.accessDenied.code.label=КОД ОШИБКИ
+message.accessDenied.code.text=HTTP 403 Доступ запрещен
+message.accessDenied.description.label=ОПИСАНИЕ ОШИБКИ
+message.accessDenied.description.text=Доступ Запрещен. Доступ К Данной Странице На Сервере Запрещен.
+message.accessDenied.footer=ХОРОШЕГО ДНЯ
 #Contacts
-message.contacts.heading = Наши контакты
-message.contacts.workingHours = Время работы: 10:00-17:00
-message.contacts.weekends = Выходные: Понедельник
-message.contacts.address = Адрес: г.Минск, ул.Уручская, Строительный рынок "Уручье", павильон 27А
-message.contacts.phone.heading = Телефоны:
-message.contacts.phone1 = A1 +375 (44) 782-50-19</p>
-message.contacts.phone2 = MTC +375 (29) 708-76-93</p>
+message.contacts.heading=Наши контакты
+message.contacts.workingHours=Время работы: 10:00-17:00
+message.contacts.weekends=Выходные: Понедельник
+message.contacts.address=Адрес: г.Минск, ул.Уручская, Строительный рынок "Уручье", павильон 27А
+message.contacts.phone.heading=Телефоны:
+message.contacts.phone1=A1 +375 (44) 782-50-19</p>
+message.contacts.phone2=MTC +375 (29) 708-76-93</p>
 #Catalog
-message.catalog.mirror.description = Зеркала – многофункциональные элементы интерьера. Они сочетают две основные функции: практическую и декоративную. С их помощью можно преобразить помещение, добиться интересных оптических эффектов. Сделать заказ можно по телефону или посредством онлайн-формы.
-message.catalog.partition.description = Стеклянные перегородки – это не только способ зонирования пространства, но и элемент декора. Они могут визуально расширить помещение и увеличить световой поток. Сделать заказ можно по телефону или посредством онлайн-формы.
-message.catalog.shower.description = Душевые кабины из стекла прекрасно решают вопросы, связанные с качеством, удобством, функциональностью ванной комнаты. Они позволяют устранить тесноту, однообразие, реализовать самые интересные дизайнерские задумки в интерьере комнаты. Сделать заказ можно по телефону или посредством онлайн-формы.
-message.catalog.apron.description = Появление скинали позволило пересмотреть подходы к оформлению кухонного интерьера. Фартук для кухни из стекла не просто стал популярным интерьерным решением. Сделать заказ можно по телефону или посредством онлайн-формы.
+message.catalog.mirror.description=Зеркала – многофункциональные элементы интерьера. Они сочетают две основные функции: практическую и декоративную. С их помощью можно преобразить помещение, добиться интересных оптических эффектов. Сделать заказ можно по телефону или посредством онлайн-формы.
+message.catalog.partition.description=Стеклянные перегородки – это не только способ зонирования пространства, но и элемент декора. Они могут визуально расширить помещение и увеличить световой поток. Сделать заказ можно по телефону или посредством онлайн-формы.
+message.catalog.shower.description=Душевые кабины из стекла прекрасно решают вопросы, связанные с качеством, удобством, функциональностью ванной комнаты. Они позволяют устранить тесноту, однообразие, реализовать самые интересные дизайнерские задумки в интерьере комнаты. Сделать заказ можно по телефону или посредством онлайн-формы.
+message.catalog.apron.description=Появление скинали позволило пересмотреть подходы к оформлению кухонного интерьера. Фартук для кухни из стекла не просто стал популярным интерьерным решением. Сделать заказ можно по телефону или посредством онлайн-формы.
 #Enums
-message.enum.productType.glass.plural = Стекло
-message.enum.productType.glass = Стекло
-message.enum.productType.mirror.plural = Зеркала
-message.enum.productType.mirror = Зеркало
-message.enum.productType.partition.plural = Переородки
-message.enum.productType.partition = Перегородка
-message.enum.productType.shower.plural = Душевые
-message.enum.productType.shower = Душевая
-message.enum.productType.apron.plural = Кухонные скинали
-message.enum.productType.apron = Кухонные скинали
-
-
+message.enum.productType.glass.plural=Стекло
+message.enum.productType.glass=Стекло
+message.enum.productType.mirror.plural=Зеркала
+message.enum.productType.mirror=Зеркало
+message.enum.productType.partition.plural=Переородки
+message.enum.productType.partition=Перегородка
+message.enum.productType.shower.plural=Душевые
+message.enum.productType.shower=Душевая
+message.enum.productType.apron.plural=Кухонные скинали
+message.enum.productType.apron=Кухонные скинали
 enum.orderStatus.CART=Корзина
+#Orders
+message.orders.heading=Заказы
+message.orders.column.orderList=Состав заказа
+message.orders.column.cost=Стоимость
+message.orders.button.formOrder=Сформировать заказ
+message.orders.button.formAndPayOrder=Сформировать и оплатить заказ
+message.orders.total=Итог
+message.orders.deliveryMethod=Способы доставки
+message.orders.deliveryMethod.delivery=Доставка
+message.orders.deliveryMethod.pickUp=Самовывоз
+message.orders.paymentMethod=Способы оплаты
+message.orders.paymentMethod.cash=Наличные
+message.orders.paymentMethod.card=Карта
+message.orders.address.text=* Стоимость доставки уточняте по телефону
+message.orders.total.text=* Итоговая стоимость без учета доставки
