--- a/src/main/resources/messages/messages_en.properties
+++ b/src/main/resources/messages/messages_en.properties
@@ -2,11 +2,16 @@
 #Main navbar
 message.navbar.modal.header=Have any questions?
 message.navbar.modal.button.send=Send
+message.navbar.menu=Menu
 message.navbar.section.home=Home
 message.navbar.section.calculator=Calculate order
 message.navbar.section.catalog=Catalog
 message.navbar.section.contacts=Contacts
 message.navbar.section.cart=Cart
+message.navbar.section.priceLists=Price lists
+message.navbar.section.components=Components
+message.navbar.section.catalogSettings=Catalog settings
+message.navbar.section.onlineStore=Online store
 message.navbar.lang.heading=Language
 message.navbar.lang.en=English
 message.navbar.lang.ru=Russian
@@ -61,6 +66,8 @@ message.form.topic.placeholder=Topic
 message.form.message.placeholder=Messages
 message.form.login.placeHolder=Enter login
 message.form.login.label=Login
+message.form.username.placeHolder=Enter username
+message.form.username.label=Username
 message.form.password.placeHolder=Enter password
 message.form.password.label=Password
 message.form.passwordConfirm.placeHolder=Confirm password
@@ -72,6 +79,8 @@ message.form.signUpTextEmail=We'll never share your data with anyone else.
 message.form.button.selectAll=Select all
 message.form.address.label = Address
 message.form.address.placeholder = Enter delivery address
+message.form.button.save = Save
+message.form.button.add = Add
 #Notification
 message.notification.modalSend.success=Your request is sent successfully
 #Validation
@@ -107,6 +116,7 @@ message.catalog.partition.description = Glass partitions are not only a way of z
 message.catalog.shower.description = Glass shower enclosures perfectly solve issues related to the quality, convenience, functionality of the bathroom. They allow you to eliminate crowding, monotony, and implement the most interesting design ideas in the interior of the room. You can place an order by phone or via the online form.
 message.catalog.apron.description = The appearance of skinale allowed us to reconsider approaches to the design of the kitchen interior. A glass apron for the kitchen has not just become a popular interior solution. You can place an order by phone or via the online form.
 #Enums
+#ProdctType
 message.enum.productType.glass.plural = Glass
 message.enum.productType.glass = Glass
 message.enum.productType.mirror.plural = Mirrors
@@ -117,6 +127,10 @@ message.enum.productType.shower.plural = Showers
 message.enum.productType.shower = Shower
 message.enum.productType.apron.plural = Kitchen aprons
 message.enum.productType.apron = Kitchen apron
+#OrderStatus
+message.enum.orderStatus.active = Active
+message.enum.orderStatus.paid = Paid
+message.enum.orderStatus.closed = Closed
 #Orders
 message.orders.heading = Orders
 message.orders.column.orderList = Order list
@@ -132,3 +146,17 @@ message.orders.paymentMethod.cash = Cash
 message.orders.paymentMethod.card = Card
 message.orders.address.text=* Specify the delivery cost by phone
 message.orders.total.text=* Total cost excluding delivery
+message.orders.filter.label = Filter:
+message.orders.filter.active = Active
+message.orders.filter.all = All
+message.orders.filter.paid = Paid
+message.orders.filter.expired = Expired
+message.orders.filter.closed = Closed
+message.orders.column.name = Name
+message.orders.column.product = Product
+message.orders.column.status = Status
+message.orders.column.date = Date
+message.orders.column.deadline = Deadline
+#Profile
+message.profile.heading = Edit profile
+message.profile.button.ordersHistory = Orders history
