--- a/src/main/resources/messages/messages_en.properties
+++ b/src/main/resources/messages/messages_en.properties
@@ -81,6 +81,8 @@ message.form.address.label = Address
 message.form.address.placeholder = Enter delivery address
 message.form.button.save = Save
 message.form.button.add = Add
+message.form.button.update = Update
+message.form.button.close = Mark as closed
 #Notification
 message.notification.modalSend.success=Your request is sent successfully
 #Validation
@@ -133,6 +135,8 @@ message.enum.orderStatus.paid = Paid
 message.enum.orderStatus.closed = Closed
 #Orders
 message.orders.heading = Orders
+message.orders.heading.single = Order
+message.orders.glass.heading = Glass
 message.orders.column.orderList = Order list
 message.orders.column.cost = Cost
 message.orders.button.formOrder = Form order
@@ -157,6 +161,13 @@ message.orders.column.product = Product
 message.orders.column.status = Status
 message.orders.column.date = Date
 message.orders.column.deadline = Deadline
+#Glass
+message.glass.column.type = Type
+message.glass.column.size = Size
+message.glass.column.amount = Amount
+message.glass.column.processing = Processing
+#Customer
+message.customer.heading = Customer contacts
 #Profile
 message.profile.heading = Edit profile
 message.profile.button.ordersHistory = Orders history
