--- a/src/main/resources/messages/messages_ru.properties
+++ b/src/main/resources/messages/messages_ru.properties
@@ -81,6 +81,8 @@ message.form.address.label=Адрес
 message.form.address.placeholder=Введите адрес доставки
 message.form.button.save = Сохранить
 message.form.button.add = Добавить
+message.form.button.update = Обновить
+message.form.button.close = Отметить закрытым
 #Notification
 message.notification.modalSend.success=Запрос успешно отправлен!
 #Validation
@@ -128,10 +130,12 @@ message.enum.productType.apron.plural=Кухонные скинали
 message.enum.productType.apron=Кухонные скинали
 #OrderStatus
 message.enum.orderStatus.active = Активный
-message.enum.orderStatus.paid = Оплаченный
-message.enum.orderStatus.closed = Закрытый
+message.enum.orderStatus.paid = Оплачен
+message.enum.orderStatus.closed = Закрыт
 #Orders
 message.orders.heading=Заказы
+message.orders.heading.single=Заказ
+message.orders.glass.heading = Стекло
 message.orders.column.orderList=Состав заказа
 message.orders.column.cost=Стоимость
 message.orders.button.formOrder=Сформировать заказ
@@ -156,6 +160,13 @@ message.orders.column.product = Изделие
 message.orders.column.status = Статус
 message.orders.column.date = Дата создания
 message.orders.column.deadline = Срок сдачи
+#Glass
+message.glass.column.type = Тип
+message.glass.column.size = Размер
+message.glass.column.amount = Количество
+message.glass.column.processing = Обработка
+#Customer
+message.customer.heading = Контакты заказчика
 #Profile
 message.profile.heading = Изменение личной информации
 message.profile.button.ordersHistory = История заказов
