--- a/src/main/resources/messages/messages_en.properties
+++ b/src/main/resources/messages/messages_en.properties
@@ -56,7 +56,7 @@ message.main.acts.line4=We will fulfill your every request quickly.
 message.main.acts.line5=We can perform glass surface treatment services: cutting, drilling, matting, tempering and much more. We will carry out any work quickly and efficiently.
 #Form
 message.form.nameModal.placeHolder=Introduce yourself
-message.form.name.placeHolder=Enter name
+message.form.name.placeHolder=Enter first and last name
 message.form.name.label=Name
 message.form.email.placeHolder=Enter email
 message.form.email.label=Email
@@ -167,7 +167,8 @@ message.glass.column.size = Size
 message.glass.column.amount = Amount
 message.glass.column.processing = Processing
 #Customer
-message.customer.heading = Customer contacts
+message.customer.heading = Customer information
+message.customer.contacts = Customer contacts
 #Profile
 message.profile.heading = Edit profile
 message.profile.button.ordersHistory = Orders history
