--- a/src/main/resources/messages/messages_ru.properties
+++ b/src/main/resources/messages/messages_ru.properties
@@ -166,7 +166,8 @@ message.glass.column.size = Размер
 message.glass.column.amount = Количество
 message.glass.column.processing = Обработка
 #Customer
-message.customer.heading = Контакты заказчика
+message.customer.heading = Информация о заказчике
+message.customer.contacts = Контакты заказчика
 #Profile
 message.profile.heading = Изменение личной информации
 message.profile.button.ordersHistory = История заказов
