component i18n, processing type enum

--- a/src/main/resources/messages/messages_en.properties
+++ b/src/main/resources/messages/messages_en.properties
@@ -83,6 +83,13 @@ message.form.button.save = Save
 message.form.button.add = Add
 message.form.button.update = Update
 message.form.button.close = Mark as closed
+message.form.button.open = Open
+message.form.nameComponent.label = Name
+message.form.nameComponent.placeholder = Enter name
+message.form.thickness.label = Thickness
+message.form.thickness.placeholder = Enter thickness
+message.form.symbol.label = Symbol
+message.form.symbol.placeholder = Enter symbol
 #Notification
 message.notification.modalSend.success=Your request is sent successfully
 #Validation
@@ -133,6 +140,22 @@ message.enum.productType.apron = Kitchen apron
 message.enum.orderStatus.active = Active
 message.enum.orderStatus.paid = Paid
 message.enum.orderStatus.closed = Closed
+#Component
+message.enum.componentType.glassType.plural = Glass types
+message.enum.componentType.glassType = Glass type
+message.enum.componentType.glassType.info = Glass type information
+message.enum.componentType.processing.plural = Processing
+message.enum.componentType.processing = Processing
+message.enum.componentType.processing.info = Processing information
+message.enum.componentType.accessory.plural = Accessories
+message.enum.componentType.accessory = Accessory
+message.enum.componentType.accessory.info = Accessory information
+#ProcessingType
+message.enum.processingType.processing = Processing
+message.enum.processingType.grinding = Grinding
+message.enum.processingType.facet = Facet
+message.enum.processingType.hole = Hole
+
 #Orders
 message.orders.heading = Orders
 message.orders.heading.single = Order
@@ -172,3 +195,11 @@ message.customer.contacts = Customer contacts
 #Profile
 message.profile.heading = Edit profile
 message.profile.button.ordersHistory = Orders history
+#Component
+message.component.section.glassType.text = Working on glass types adding, updating and deleting
+message.component.section.processing.text = Working on processing adding, updating and deleting
+message.component.section.accessory.text = Working on accessory adding, updating and deleting
+message.component.column.type = Type
+message.component.column.name = Name
+message.component.column.thickness = Thickness
+message.component.column.symbol = Symbol
