--- a/src/main/resources/messages/messages_ru.properties
+++ b/src/main/resources/messages/messages_ru.properties
@@ -83,6 +83,13 @@ message.form.button.save = Сохранить
 message.form.button.add = Добавить
 message.form.button.update = Обновить
 message.form.button.close = Отметить закрытым
+message.form.button.open = Открыть
+message.form.nameComponent.label = Наименование
+message.form.nameComponent.placeholder = Введите наименование
+message.form.thickness.label = Толщина
+message.form.thickness.placeholder = Введите толщину
+message.form.symbol.label = Краткое обозначение
+message.form.symbol.placeholder = Введите краткое обозначение
 #Notification
 message.notification.modalSend.success=Запрос успешно отправлен!
 #Validation
@@ -132,6 +139,21 @@ message.enum.productType.apron=Кухонные скинали
 message.enum.orderStatus.active = Активный
 message.enum.orderStatus.paid = Оплачен
 message.enum.orderStatus.closed = Закрыт
+#Component
+message.enum.componentType.glassType.plural = Типы сктекла
+message.enum.componentType.glassType = Тип стекла
+message.enum.componentType.glassType.info = Информация по типу стекла
+message.enum.componentType.processing = Обработка
+message.enum.componentType.processing.plural = Обработка
+message.enum.componentType.processing.info = Информация по обработке
+message.enum.componentType.accessory.plural = Фурнитура
+message.enum.componentType.accessory = Фурнитура
+message.enum.componentType.accessory.info = Информация по фурнитуре
+#ProcessingType
+message.enum.processingType.processing = Полировка
+message.enum.processingType.grinding = Шлифовка
+message.enum.processingType.facet = Фацет
+message.enum.processingType.hole = Отверстие
 #Orders
 message.orders.heading=Заказы
 message.orders.heading.single=Заказ
@@ -171,3 +193,11 @@ message.customer.contacts = Контакты заказчика
 #Profile
 message.profile.heading = Изменение личной информации
 message.profile.button.ordersHistory = История заказов
+#Component
+message.component.section.glassType.text = Работа над добавлением, изменением, удалением типов стекла
+message.component.section.processing.text = Работа над добавлением, изменением, удалением обработки
+message.component.section.accessory.text = Работа над добавлением, изменением, удалением фурнитуры
+message.component.column.type = Тип
+message.component.column.name = Наименование
+message.component.column.thickness = Толщина
+message.component.column.symbol = Краткое обозначение
